@@ -3,7 +3,7 @@
 #'
 #' @param x              sp SpatialPointsDataFrame object
 #' @param row.names      Unique row.names assigned to results  
-#' @param k              K nearest neighbors
+#' @param k              K nearest neighbors, defaults to saturated [n(x) - 1]
 #' @param max.dist       Maximum length of an edge (used for distance constraint)
 #' @param sym            Create symmetrical graph (FALSE/TRUE)
 #' @param drop.lower     (FALSE/TRUE) Drop lower triangle of matrix (duplicate edges) 
