@@ -12,7 +12,7 @@ knn.graph(x, row.names = NULL, k = NULL, max.dist = NULL,
 
 \item{row.names}{Unique row.names assigned to results}
 
-\item{k}{K nearest neighbors}
+\item{k}{K nearest neighbors, defaults to saturated [n(x) - 1]}
 
 \item{max.dist}{Maximum length of an edge (used for distance constraint)}
 
